<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/menu_wallpaper_save"
            android:icon="@drawable/ic_save_white_24dp"
            android:title="@string/menu_save_wallpaper"
            app:showAsAction="ifRoom" />
    <item
            app:showAsAction="ifRoom"
            android:id="@+id/menu_wallpaper_resolution"
            android:icon="@drawable/ic_aspect_ratio_white_24dp"
            android:title="@string/menu_wallpaper_resolution" />
    <item
            android:id="@+id/menu_wallpaper_both"
            android:icon="@drawable/ic_smartphone_white_24dp"
            android:title="@string/menu_set_wallpaper_mode_both" />
    <item
            android:id="@+id/menu_wallpaper_home"
            android:icon="@drawable/ic_home_white_24dp"
            android:title="@string/menu_set_wallpaper_mode_home" />
    <item
            android:id="@+id/menu_wallpaper_lock"
            android:icon="@drawable/ic_lock_white_24dp"
            android:title="@string/menu_set_wallpaper_mode_lock" />
</menu>