<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
            android:enabled="true"
            android:icon="@drawable/ic_shortcut_both"
            android:shortcutId="both"
            android:shortcutShortLabel="@string/pref_set_wallpaper_auto_mode_both">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="me.liaoheng.wallpaper.ui.ShortcutActivity"
                android:targetPackage="me.liaoheng.wallpaper">
            <extra
                    android:name="set_wallpaper_mode"
                    android:value="0" />
        </intent>
    </shortcut>

    <shortcut
            android:enabled="true"
            android:icon="@drawable/ic_shortcut_home"
            android:shortcutId="home"
            android:shortcutShortLabel="@string/pref_set_wallpaper_auto_mode_home">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="me.liaoheng.wallpaper.ui.ShortcutActivity"
                android:targetPackage="me.liaoheng.wallpaper">
            <extra
                    android:name="set_wallpaper_mode"
                    android:value="1" />
        </intent>
    </shortcut>

    <shortcut
            android:enabled="true"
            android:icon="@drawable/ic_shortcut_lock"
            android:shortcutId="lock"
            android:shortcutShortLabel="@string/pref_set_wallpaper_auto_mode_lock">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="me.liaoheng.wallpaper.ui.ShortcutActivity"
                android:targetPackage="me.liaoheng.wallpaper">
            <extra
                    android:name="set_wallpaper_mode"
                    android:value="2" />
        </intent>
    </shortcut>
</shortcuts>